[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["syuni <motikix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1_2"
path = "src/1_2.rs"

[[bin]]
name = "1_2_1"
path = "src/1_2_1.rs"

[[bin]]
name = "1_2_2"
path = "src/1_2_2.rs"

[[bin]]
name = "1_2_2_1"
path = "src/1_2_2_1.rs"

[[bin]]
name = "1_2_3"
path = "src/1_2_3.rs"

[[bin]]
name = "4_1"
path = "src/4_1.rs"

[[bin]]
name = "4_2"
path = "src/4_2.rs"

[[bin]]
name = "4_3"
path = "src/4_3.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "5_1"
path = "src/5_1.rs"

[[bin]]
name = "5_2"
path = "src/5_2.rs"

[[bin]]
name = "5_3"
path = "src/5_3.rs"

[[bin]]
name = "6"
path = "src/6.rs"

[[bin]]
name = "7_1"
path = "src/7_1.rs"

[[bin]]
name = "7_2"
path = "src/7_2.rs"

[[bin]]
name = "7_2_1"
path = "src/7_2_1.rs"

[[bin]]
name = "7_3"
path = "src/7_3.rs"

[[bin]]
name = "7_4"
path = "src/7_4.rs"

[[bin]]
name = "7_5"
path = "src/7_5.rs"

[[bin]]
name = "7_5_1_1"
path = "src/7_5_1_1.rs"

[[bin]]
name = "7_5_1_2"
path = "src/7_5_1_2.rs"

[[bin]]
name = "7_5_1_3"
path = "src/7_5_1_3.rs"

[[bin]]
name = "7_5_1_4"
path = "src/7_5_1_4.rs"

[[bin]]
name = "7_5_2"
path = "src/7_5_2.rs"

[[bin]]
name = "7_5_3"
path = "src/7_5_3.rs"

[[bin]]
name = "7_6"
path = "src/7_6.rs"

[[bin]]
name = "7_7"
path = "src/7_7.rs"

[[bin]]
name = "8"
path = "src/8.rs"

[[bin]]
name = "8_1"
path = "src/8_1.rs"

[[bin]]
name = "8_2"
path = "src/8_2.rs"

[[bin]]
name = "8_2_1"
path = "src/8_2_1.rs"

[[bin]]
name = "8_2_2"
path = "src/8_2_2.rs"

[[bin]]
name = "8_2_3"
path = "src/8_2_3.rs"

[[bin]]
name = "8_2_4"
path = "src/8_2_4.rs"

[[bin]]
name = "8_2_5"
path = "src/8_2_4.rs"

[[bin]]
name = "8_2_6_1"
path = "src/8_2_6_1.rs"

[[bin]]
name = "8_2_6_2"
path = "src/8_2_6_2.rs"

[[bin]]
name = "8_3"
path = "src/8_3.rs"
