[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["syuni <motikix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1_2"
path = "src/1_2.rs"

[[bin]]
name = "1_2_1"
path = "src/1_2_1.rs"

[[bin]]
name = "1_2_2"
path = "src/1_2_2.rs"

[[bin]]
name = "1_2_2_1"
path = "src/1_2_2_1.rs"

[[bin]]
name = "1_2_3"
path = "src/1_2_3.rs"

[[bin]]
name = "4_1"
path = "src/4_1.rs"

[[bin]]
name = "4_2"
path = "src/4_2.rs"

[[bin]]
name = "4_3"
path = "src/4_3.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "5_1"
path = "src/5_1.rs"

[[bin]]
name = "5_2"
path = "src/5_2.rs"

[[bin]]
name = "5_3"
path = "src/5_3.rs"

[[bin]]
name = "6"
path = "src/6.rs"

[[bin]]
name = "7_1"
path = "src/7_1.rs"

[[bin]]
name = "7_2"
path = "src/7_2.rs"

[[bin]]
name = "7_2_1"
path = "src/7_2_1.rs"

[[bin]]
name = "7_3"
path = "src/7_3.rs"

[[bin]]
name = "7_4"
path = "src/7_4.rs"

[[bin]]
name = "7_5"
path = "src/7_5.rs"

[[bin]]
name = "7_5_1_1"
path = "src/7_5_1_1.rs"

[[bin]]
name = "7_5_1_2"
path = "src/7_5_1_2.rs"

[[bin]]
name = "7_5_1_3"
path = "src/7_5_1_3.rs"

[[bin]]
name = "7_5_1_4"
path = "src/7_5_1_4.rs"

[[bin]]
name = "7_5_2"
path = "src/7_5_2.rs"

[[bin]]
name = "7_5_3"
path = "src/7_5_3.rs"

[[bin]]
name = "7_6"
path = "src/7_6.rs"

[[bin]]
name = "7_7"
path = "src/7_7.rs"

[[bin]]
name = "8"
path = "src/8.rs"

[[bin]]
name = "8_1"
path = "src/8_1.rs"

[[bin]]
name = "8_2"
path = "src/8_2.rs"

[[bin]]
name = "8_2_1"
path = "src/8_2_1.rs"

[[bin]]
name = "8_2_2"
path = "src/8_2_2.rs"

[[bin]]
name = "8_2_3"
path = "src/8_2_3.rs"

[[bin]]
name = "8_2_4"
path = "src/8_2_4.rs"

[[bin]]
name = "8_2_5"
path = "src/8_2_4.rs"

[[bin]]
name = "8_2_6_1"
path = "src/8_2_6_1.rs"

[[bin]]
name = "8_2_6_2"
path = "src/8_2_6_2.rs"

[[bin]]
name = "8_3"
path = "src/8_3.rs"

[[bin]]
name = "9"
path = "src/9.rs"

[[bin]]
name = "9_1"
path = "src/9_1.rs"

[[bin]]
name = "9_2"
path = "src/9_2.rs"

[[bin]]
name = "9_3"
path = "src/9_3.rs"

[[bin]]
name = "9_4"
path = "src/9_4.rs"

[[bin]]
name = "10_1"
path = "src/10_1.rs"

[[bin]]
name = "10_2"
path = "src/10_2.rs"

[[bin]]
name = "10_3"
path = "src/10_3.rs"

[[bin]]
name = "10_4"
path = "src/10_4.rs"

[[bin]]
name = "10_5"
path = "src/10_5.rs"

[[bin]]
name = "12_1"
path = "src/12_1.rs"

[[bin]]
name = "12_3"
path = "src/12_3.rs"

[[bin]]
name = "13"
path = "src/13.rs"

[[bin]]
name = "13_1"
path = "src/13_1.rs"

[[bin]]
name = "13_2"
path = "src/13_2.rs"

[[bin]]
name = "13_3"
path = "src/13_3.rs"

[[bin]]
name = "13_4"
path = "src/13_4.rs"

[[bin]]
name = "13_4_1"
path = "src/13_4_1.rs"

[[bin]]
name = "13_5"
path = "src/13_5.rs"

[[bin]]
name = "13_6"
path = "src/13_6.rs"

[[bin]]
name = "13_7_1"
path = "src/13_7_1.rs"

[[bin]]
name = "13_7_2"
path = "src/13_7_2.rs"

[[bin]]
name = "13_8"
path = "src/13_8.rs"

[[bin]]
name = "13_8_1"
path = "src/13_8_1.rs"

[[bin]]
name = "14_2"
path = "src/14_2.rs"
