[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["syuni <motikix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1_2"
path = "src/1_2.rs"

[[bin]]
name = "1_2_1"
path = "src/1_2_1.rs"

[[bin]]
name = "1_2_2"
path = "src/1_2_2.rs"

[[bin]]
name = "1_2_2_1"
path = "src/1_2_2_1.rs"

[[bin]]
name = "1_2_3"
path = "src/1_2_3.rs"

[[bin]]
name = "4_1"
path = "src/4_1.rs"

[[bin]]
name = "4_2"
path = "src/4_2.rs"

[[bin]]
name = "4_3"
path = "src/4_3.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "5_1"
path = "src/5_1.rs"

[[bin]]
name = "5_2"
path = "src/5_2.rs"

[[bin]]
name = "5_3"
path = "src/5_3.rs"

[[bin]]
name = "6"
path = "src/6.rs"

[[bin]]
name = "7_1"
path = "src/7_1.rs"

[[bin]]
name = "7_2"
path = "src/7_2.rs"

[[bin]]
name = "7_2_1"
path = "src/7_2_1.rs"

[[bin]]
name = "7_3"
path = "src/7_3.rs"

[[bin]]
name = "7_4"
path = "src/7_4.rs"

[[bin]]
name = "7_5"
path = "src/7_5.rs"

[[bin]]
name = "7_5_1_1"
path = "src/7_5_1_1.rs"

[[bin]]
name = "7_5_1_2"
path = "src/7_5_1_2.rs"

[[bin]]
name = "7_5_1_3"
path = "src/7_5_1_3.rs"

[[bin]]
name = "7_5_1_4"
path = "src/7_5_1_4.rs"

[[bin]]
name = "7_5_2"
path = "src/7_5_2.rs"

[[bin]]
name = "7_5_3"
path = "src/7_5_3.rs"

[[bin]]
name = "7_6"
path = "src/7_6.rs"

[[bin]]
name = "7_7"
path = "src/7_7.rs"

[[bin]]
name = "8"
path = "src/8.rs"

[[bin]]
name = "8_1"
path = "src/8_1.rs"

[[bin]]
name = "8_2"
path = "src/8_2.rs"

[[bin]]
name = "8_2_1"
path = "src/8_2_1.rs"

[[bin]]
name = "8_2_2"
path = "src/8_2_2.rs"

[[bin]]
name = "8_2_3"
path = "src/8_2_3.rs"

[[bin]]
name = "8_2_4"
path = "src/8_2_4.rs"

[[bin]]
name = "8_2_5"
path = "src/8_2_4.rs"

[[bin]]
name = "8_2_6_1"
path = "src/8_2_6_1.rs"

[[bin]]
name = "8_2_6_2"
path = "src/8_2_6_2.rs"

[[bin]]
name = "8_3"
path = "src/8_3.rs"

[[bin]]
name = "9"
path = "src/9.rs"

[[bin]]
name = "9_1"
path = "src/9_1.rs"

[[bin]]
name = "9_2"
path = "src/9_2.rs"

[[bin]]
name = "9_3"
path = "src/9_3.rs"

[[bin]]
name = "9_4"
path = "src/9_4.rs"

[[bin]]
name = "10_1"
path = "src/10_1.rs"

[[bin]]
name = "10_2"
path = "src/10_2.rs"

[[bin]]
name = "10_3"
path = "src/10_3.rs"

[[bin]]
name = "10_4"
path = "src/10_4.rs"

[[bin]]
name = "10_5"
path = "src/10_5.rs"

[[bin]]
name = "12_1"
path = "src/12_1.rs"

[[bin]]
name = "12_3"
path = "src/12_3.rs"

[[bin]]
name = "13"
path = "src/13.rs"

[[bin]]
name = "13_1"
path = "src/13_1.rs"

[[bin]]
name = "13_2"
path = "src/13_2.rs"

[[bin]]
name = "13_3"
path = "src/13_3.rs"

[[bin]]
name = "13_4"
path = "src/13_4.rs"

[[bin]]
name = "13_4_1"
path = "src/13_4_1.rs"

[[bin]]
name = "13_5"
path = "src/13_5.rs"

[[bin]]
name = "13_6"
path = "src/13_6.rs"

[[bin]]
name = "13_7_1"
path = "src/13_7_1.rs"

[[bin]]
name = "13_7_2"
path = "src/13_7_2.rs"

[[bin]]
name = "13_8"
path = "src/13_8.rs"

[[bin]]
name = "13_8_1"
path = "src/13_8_1.rs"

[[bin]]
name = "14_2"
path = "src/14_2.rs"

[[bin]]
name = "14_2_1"
path = "src/14_2_1.rs"

[[bin]]
name = "14_3"
path = "src/14_3.rs"

[[bin]]
name = "14_3_1"
path = "src/14_3_1.rs"

[[bin]]
name = "14_3_2"
path = "src/14_3_2.rs"

[[bin]]
name = "14_3_3"
path = "src/14_3_3.rs"

[[bin]]
name = "14_3_4"
path = "src/14_3_4.rs"

[[bin]]
name = "14_4"
path = "src/14_4.rs"

[[bin]]
name = "14_4_1"
path = "src/14_4_1.rs"

[[bin]]
name = "14_4_2"
path = "src/14_4_2.rs"

[[bin]]
name = "14_4_3"
path = "src/14_4_3.rs"

[[bin]]
name = "14_4_4"
path = "src/14_4_4.rs"

[[bin]]
name = "14_4_5"
path = "src/14_4_5.rs"

[[bin]]
name = "14_4_6"
path = "src/14_4_6.rs"

[[bin]]
name = "14_4_7"
path = "src/14_4_7.rs"

[[bin]]
name = "14_4_8"
path = "src/14_4_8.rs"

[[bin]]
name = "15"
path = "src/15.rs"

[[bin]]
name = "15_1"
path = "src/15_1.rs"

[[bin]]
name = "15_2"
path = "src/15_2.rs"

[[bin]]
name = "15_3"
path = "src/15_3.rs"

[[bin]]
name = "15_4"
path = "src/15_4.rs"

[[bin]]
name = "15_5"
path = "src/15_5.rs"

[[bin]]
name = "16"
path = "src/16.rs"

[[bin]]
name = "16_1"
path = "src/16_1.rs"

[[bin]]
name = "16_2"
path = "src/16_2.rs"

[[bin]]
name = "16_3"
path = "src/16_3.rs"

[[bin]]
name = "16_4"
path = "src/16_4.rs"

[[bin]]
name = "16_5"
path = "src/16_5.rs"

[[bin]]
name = "16_6"
path = "src/16_6.rs"

[[bin]]
name = "16_7"
path = "src/16_7.rs"

[[bin]]
name = "16_7_1"
path = "src/16_7_1.rs"

[[bin]]
name = "16_7_2"
path = "src/16_7_2.rs"

[[bin]]
name = "16_7_3"
path = "src/16_7_3.rs"

[[bin]]
name = "16_8"
path = "src/16_8.rs"

[[bin]]
name = "16_9"
path = "src/16_9.rs"

[[bin]]
name = "16_10"
path = "src/16_10.rs"

[[bin]]
name = "17_1"
path = "src/17_1.rs"

[[bin]]
name = "17_2"
path = "src/17_2.rs"

[[bin]]
name = "17_3"
path = "src/17_3.rs"

[[bin]]
name = "17_4"
path = "src/17_4.rs"

[[bin]]
name = "17_5"
path = "src/17_5.rs"

[[bin]]
name = "17_5_1"
path = "src/17_5_1.rs"

[[bin]]
name = "17_6"
path = "src/17_6.rs"

[[bin]]
name = "17_7"
path = "src/17_7.rs"

[[bin]]
name = "17_7_1"
path = "src/17_7_1.rs"

[[bin]]
name = "17_7_2"
path = "src/17_7_2.rs"

[[bin]]
name = "18_1"
path = "src/18_1.rs"

[[bin]]
name = "18_2"
path = "src/18_2.rs"

[[bin]]
name = "18_3"
path = "src/18_3.rs"

[[bin]]
name = "18_4_1"
path = "src/18_4_1.rs"

[[bin]]
name = "18_4_2"
path = "src/18_4_2.rs"

[[bin]]
name = "18_5"
path = "src/18_5.rs"

[[bin]]
name = "18_5_1"
path = "src/18_5_1.rs"

[[bin]]
name = "18_5_2"
path = "src/18_5_2.rs"

[[bin]]
name = "18_6"
path = "src/18_6.rs"

[[bin]]
name = "18_7"
path = "src/18_7.rs"

[[bin]]
name = "18_7_1"
path = "src/18_7_1.rs"

[[bin]]
name = "18_8"
path = "src/18_8.rs"

[[bin]]
name = "19_1"
path = "src/19_1.rs"

[[bin]]
name = "19_2"
path = "src/19_2.rs"
